http copy fails with "The specified location is not mounted"
gvfs: 1.50.0-1
( Debian unstable )
$ gio copy -p http://user:pass@download.magnatune.com/artists/music/Hide/Loops%20For%20Licensing/Classical%20Loops%201/magnaloops-classical1-ogg.zip test
gio: http://user:pass@download.magnatune.com/artists/music/Hide/Loops%20For%20Licensing/Classical%20Loops%201/magnaloops-classical1-ogg.zip: The specified location is not mounted
wget of the same url succeeds.