http: Unescape prefix to fix handling of encoded URIs

Currently, the HTTP backend fails with the "The specified location is
not mounted" error for URIs with path containing escaped characters.
This is because the mount prefix is not unescaped. This is unfortunatelly
another libsoup3 port regression. Let's correctly unescape the prefix to
make that work again.

Fixes: https://gitlab.gnome.org/GNOME/gvfs/-/issues/623